# Loliland-ModLoader

./: .gitignore  CMakeLists.txt  LOAD_MODS.bat  LoliLoader.cpp  README.txt  build.bat
.github/workflows/: build.yml  release.yml
